--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>Listsweeper</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script type="module" crossorigin src="./public/assets/index.js"></script>
+    <script type="module" crossorigin src="./assets/dummy.js"></script>
+   <script type="module" crossorigin src="./assets/main.js"></script>
   </head>
   <body>
     <div id="divRoot">
