--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,13 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Listsweeper</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <script type="module" crossorigin src="./assets/dummy.js"></script>
-   <script type="module" crossorigin src="./assets/main.js"></script>
   </head>
   <body>
     <div id="divRoot">
     </div>
-    
+    <script  src="./js/main.js"></script>
   </body>
 </html>
